<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/defaultleftmargin"
    android:layout_marginTop="@dimen/defaulttopmargin"
    android:layout_marginRight="@dimen/defaultrightmargin"
    android:layout_marginBottom="@dimen/defaultbottommargin"
    android:orientation="vertical"
    tools:context=".DrawerJournal.EditActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/defaulttopmargin"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/trip_name"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/trip_name_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/defaultbottommargin"
            android:drawableLeft="@android:drawable/ic_menu_info_details" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/destination"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/destination_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/defaultbottommargin"
            android:drawableLeft="@android:drawable/ic_menu_myplaces" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Trip Type" />

        <RadioGroup
            android:id="@+id/trip_type_radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/defaultbottommargin"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/city_break_radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/defaultbottommargin"
                android:text="@string/city_break" />

            <RadioButton
                android:id="@+id/seaside_radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/defaultbottommargin"
                android:text="@string/seaside" />

            <RadioButton
                android:id="@+id/mountains_radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mountains" />

        </RadioGroup>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/seek_bar_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="PRICE (€)"
            android:textStyle="bold" />

        <SeekBar
            android:id="@+id/price_seekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/defaultbottommargin"
            android:layout_marginRight="@dimen/defaultbottommargin"
            android:layout_marginBottom="@dimen/defaultbottommargin" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/defaultbottommargin"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/start_date"
                android:textStyle="bold" />

            <Button
                android:id="@+id/start_date_button"
                style="?android:spinnerStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="36dp"
                android:background="@color/fabcolor"
                android:onClick="openDatePicker"
                android:text="JAN 01 2020"
                android:textColor="@color/white"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/defaultbottommargin"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/end_date"
                android:textStyle="bold" />

            <Button
                android:id="@+id/end_date_button"
                style="?android:spinnerStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="36dp"
                android:background="@color/fabcolor"
                android:onClick="openDatePicker2"
                android:text="JAN 01 2020"
                android:textColor="@color/white"
                android:textSize="15sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Rating"
            android:textStyle="bold" />

        <RatingBar
            android:id="@+id/rating_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/defaultbottommargin"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gallery_photo"
                android:textStyle="bold" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/select"
                android:textColorHint="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/add_trip_button_margin"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/take_photo"
                android:textStyle="bold" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="Take a photo"
                android:textColorHint="@color/white" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/save_data"
        android:layout_width="match_parent"
        android:layout_height="@dimen/save_button_layout_height"
        android:layout_marginTop="@dimen/save_button_margin_top"
        android:layout_marginBottom="@dimen/add_trip_button_margin"
        android:background="@color/fabcolor"
        android:text="Save"
        android:textColor="@color/white" />


</LinearLayout>